tests/ui/feature-gates/feature-gate-inline_const.rs
fn main() {
    let _ = const {
        //~^ ERROR inline-const is experimental [E0658]
        true
    };
}
